# shogiman

./: Cargo.toml  README.md  justfile
.cargo/: config.toml
assets/shaders/: board_material.wgsl
dev/hooks/: pre-commit
src/: board.rs  main.rs
src/materials/: board.rs  mod.rs
